--- a/ui/events.htm
+++ b/ui/events.htm
@@ -115,53 +115,45 @@
         </div>
 
         <div class="strip">
-            <a href="/ui/images/event2010/1.jpg" rel="pictures"><img src=
-            "/ui/images/thf_strip.jpg" /></a>
-        </div><a href="/ui/images/event2010/2.jpg" rel="pictures" style=
-        "display:hidden;"></a> <a href="/ui/images/event2010/5.jpg" rel="pictures"
-        style="display:hidden;"></a> <a href="/ui/images/event2010/7.jpg" rel=
-        "pictures" style="display:hidden;"></a> <a href="/ui/images/event2010/9.jpg"
-        rel="pictures" style="display:hidden;"></a> <a href=
-        "/ui/images/event2010/10.jpg" rel="pictures" style="display:hidden;"></a>
-        <a href="/ui/images/event2010/12.jpg" rel="pictures" style=
-        "display:hidden;"></a> <a href="/ui/images/event2010/13.jpg" rel="pictures"
-        style="display:hidden;"></a> <a href="/ui/images/event2010/14.jpg" rel=
-        "pictures" style="display:hidden;"></a> <a href=
-        "/ui/images/event2010/15.jpg" rel="pictures" style="display:hidden;"></a>
-        <a href="/ui/images/event2010/16.jpg" rel="pictures" style=
-        "display:hidden;"></a> <a href="/ui/images/event2010/18.jpg" rel="pictures"
-        style="display:hidden;"></a> <a href="/ui/images/event2010/20.jpg" rel=
-        "pictures" style="display:hidden;"></a> <a href=
-        "/ui/images/event2010/22.jpg" rel="pictures" style="display:hidden;"></a>
-        <a href="/ui/images/event2010/23.jpg" rel="pictures" style=
-        "display:hidden;"></a> <a href="/ui/images/event2010/24.jpg" rel="pictures"
-        style="display:hidden;"></a> <a href="/ui/images/event2010/25.jpg" rel=
-        "pictures" style="display:hidden;"></a> <a href=
-        "/ui/images/event2010/26.jpg" rel="pictures" style="display:hidden;"></a>
-        <a href="/ui/images/event2010/27.jpg" rel="pictures" style=
-        "display:hidden;"></a> <a href="/ui/images/event2010/28.jpg" rel="pictures"
-        style="display:hidden;"></a> <a href="/ui/images/event2010/29.jpg" rel=
-        "pictures" style="display:hidden;"></a> <a href=
-        "/ui/images/event2010/31.jpg" rel="pictures" style="display:hidden;"></a>
-        <a href="/ui/images/event2010/34.jpg" rel="pictures" style=
-        "display:hidden;"></a> <a href="/ui/images/event2010/36.jpg" rel="pictures"
-        style="display:hidden;"></a> <a href="/ui/images/event2010/38.jpg" rel=
-        "pictures" style="display:hidden;"></a> <a href=
-        "/ui/images/event2010/39.jpg" rel="pictures" style="display:hidden;"></a>
-        <a href="/ui/images/event2010/40.jpg" rel="pictures" style=
-        "display:hidden;"></a> <a href="/ui/images/event2010/42.jpg" rel="pictures"
-        style="display:hidden;"></a> <a href="/ui/images/event2010/43.jpg" rel=
-        "pictures" style="display:hidden;"></a> <a href=
-        "/ui/images/event2010/46.jpg" rel="pictures" style="display:hidden;"></a>
-        <a href="/ui/images/event2010/47.jpg" rel="pictures" style=
-        "display:hidden;"></a> <a href="/ui/images/event2010/48.jpg" rel="pictures"
-        style="display:hidden;"></a> <a href="/ui/images/event2010/50.jpg" rel=
-        "pictures" style="display:hidden;"></a> <a href=
-        "/ui/images/event2010/51.jpg" rel="pictures" style="display:hidden;"></a>
-        <a href="/ui/images/event2010/52.jpg" rel="pictures" style=
-        "display:hidden;"></a> <a href="/ui/images/event2010/54.jpg" rel="pictures"
-        style="display:hidden;"></a> <a href="/ui/images/event2010/55.jpg" rel=
-        "pictures" style="display:hidden;"></a>
+            <a href="/ui/images/event2010/1.jpg" rel="pictures"><img src="/ui/images/thf_strip.jpg" /></a>
+        </div>
+
+        <a href="/ui/images/event2010/2.jpg" rel="pictures" style="display:hidden;"></a>
+        <a href="/ui/images/event2010/5.jpg" rel="pictures" style="display:hidden;"></a>
+        <a href="/ui/images/event2010/7.jpg" rel="pictures" style="display:hidden;"></a>
+        <a href="/ui/images/event2010/9.jpg" rel="pictures" style="display:hidden;"></a>
+        <a href="/ui/images/event2010/10.jpg" rel="pictures" style="display:hidden;"></a>
+        <a href="/ui/images/event2010/12.jpg" rel="pictures" style="display:hidden;"></a>
+        <a href="/ui/images/event2010/13.jpg" rel="pictures" style="display:hidden;"></a>
+        <a href="/ui/images/event2010/14.jpg" rel="pictures" style="display:hidden;"></a>
+        <a href="/ui/images/event2010/15.jpg" rel="pictures" style="display:hidden;"></a>
+        <a href="/ui/images/event2010/16.jpg" rel="pictures" style="display:hidden;"></a>
+        <a href="/ui/images/event2010/18.jpg" rel="pictures" style="display:hidden;"></a>
+        <a href="/ui/images/event2010/20.jpg" rel="pictures" style="display:hidden;"></a>
+        <a href="/ui/images/event2010/22.jpg" rel="pictures" style="display:hidden;"></a>
+        <a href="/ui/images/event2010/23.jpg" rel="pictures" style="display:hidden;"></a>
+        <a href="/ui/images/event2010/24.jpg" rel="pictures" style="display:hidden;"></a>
+        <a href="/ui/images/event2010/25.jpg" rel="pictures" style="display:hidden;"></a>
+        <a href="/ui/images/event2010/26.jpg" rel="pictures" style="display:hidden;"></a>
+        <a href="/ui/images/event2010/27.jpg" rel="pictures" style="display:hidden;"></a>
+        <a href="/ui/images/event2010/28.jpg" rel="pictures" style="display:hidden;"></a>
+        <a href="/ui/images/event2010/29.jpg" rel="pictures" style="display:hidden;"></a>
+        <a href="/ui/images/event2010/31.jpg" rel="pictures" style="display:hidden;"></a>
+        <a href="/ui/images/event2010/34.jpg" rel="pictures" style="display:hidden;"></a>
+        <a href="/ui/images/event2010/36.jpg" rel="pictures" style="display:hidden;"></a>
+        <a href="/ui/images/event2010/38.jpg" rel="pictures" style="display:hidden;"></a>
+        <a href="/ui/images/event2010/39.jpg" rel="pictures" style="display:hidden;"></a>
+        <a href="/ui/images/event2010/40.jpg" rel="pictures" style="display:hidden;"></a>
+        <a href="/ui/images/event2010/42.jpg" rel="pictures" style="display:hidden;"></a>
+        <a href="/ui/images/event2010/43.jpg" rel="pictures" style="display:hidden;"></a>
+        <a href="/ui/images/event2010/46.jpg" rel="pictures" style="display:hidden;"></a>
+        <a href="/ui/images/event2010/47.jpg" rel="pictures" style="display:hidden;"></a>
+        <a href="/ui/images/event2010/48.jpg" rel="pictures" style="display:hidden;"></a>
+        <a href="/ui/images/event2010/50.jpg" rel="pictures" style="display:hidden;"></a>
+        <a href="/ui/images/event2010/51.jpg" rel="pictures" style="display:hidden;"></a>
+        <a href="/ui/images/event2010/52.jpg" rel="pictures" style="display:hidden;"></a>
+        <a href="/ui/images/event2010/54.jpg" rel="pictures" style="display:hidden;"></a>
+        <a href="/ui/images/event2010/55.jpg" rel="pictures" style="display:hidden;"></a>
 
         <div class="div"><img src="/ui/images/thf_div.jpg" /></div>
 
