--- a/ui/home.htm
+++ b/ui/home.htm
@@ -1,10 +1,18 @@
-<div class="mainimg" align="center"><img src="/ui/images/thf_home_img.jpg" alt="Teenok Home Image"></div>
-		
-			<div class="title1">The national statistics on children's heart ailments are alarming:</div>
-
-				
-			<div class="stats"><span class="pink">•</span> Congenital heart defects are the #1 birth defect and leading cause of all infant deaths in the USA<br><span class="pink">•</span> 8 out of every 1,000 babies born in the United States have a congenital heart defect</div>
-				
-				<div><p class="text">Teenok's mission is to offer an extra "breath of life" to existing hospital and research programs in the area of pediatric cardiology.  All funds raised are earmarked to (1) contribute to the expense of on-going clinical research in infant heart disease, (2) provide supplemental funding for equipment and personnel in pediatric cardiac units, and (3) offer financial and/or social service support to patients and their families.  The distributions are determined by a panel of trustees aided by a medical advisory group.  Heading our medical advisory board is Dr. Seth J. Lessner, Clinical Cardiac Electrophysiology Fellow at Weill Cornell Medical Center/New York Presbyterian Hospital, in conjunction with Dr. George Ruiz, attending physician in cardiology at Washington Hospital Center and Children's National Hospital.  Members of both committees serve on a strictly volunteer basis.  Teenok is 100% volunteer-run allowing the foundation to maximize the amount of proceeds donated each year.</p></div>
-
-				<div><p class="text">Teenok Heart Foundation is a member of the United Charitable Programs, a 501(c)(3), 509(a)(1) public charity and shares its federal tax status.  Donors who contribute $250 or more will be receipted directly by UCP.  In accordance with IRS regulations, those who give less than $250 may use their canceled checks as proof of donation.</p></div>
+<div class="mainimg" align="center">
+	<img src="/ui/images/thf_home_img.jpg" alt="Teenok Home Image">
+</div>
+<div class="title1">The national statistics on children's heart ailments are alarming:</div>
+<div class="stats">
+	<span class="pink">•</span>
+	 Congenital heart defects are the #1 birth defect and leading cause of all infant deaths in the USA<br />
+	 <span class="pink">•</span>
+	 8 out of every 1,000 babies born in the United States have a congenital heart defect
+</div>
+<div>
+	<p class="text">Teenok's mission is to offer an extra "breath of life" to existing hospital and research programs in the area of pediatric cardiology.  All funds raised are earmarked to (1) contribute to the expense of on-going clinical research in infant heart disease, (2) provide supplemental funding for equipment and personnel in pediatric cardiac units, and (3) offer financial and/or social service support to patients and their families.  The distributions are determined by a panel of trustees aided by a medical advisory group.  Heading our medical advisory board is Dr. Seth J. Lessner, Clinical Cardiac Electrophysiology Fellow at Weill Cornell Medical Center/New York Presbyterian Hospital, in conjunction with Dr. George Ruiz, attending physician in cardiology at Washington Hospital Center and Children's National Hospital.  Members of both committees serve on a strictly volunteer basis.  Teenok is 100% volunteer-run allowing the foundation to maximize the amount of proceeds donated each year.
+	</p>
+</div>
+<div>
+	<p class="text">Teenok Heart Foundation is a member of the United Charitable Programs, a 501(c)(3), 509(a)(1) public charity and shares its federal tax status.  Donors who contribute $250 or more will be receipted directly by UCP.  In accordance with IRS regulations, those who give less than $250 may use their canceled checks as proof of donation.
+	</p>
+</div>
