removed excess blockquotes, they were used for positioning...lol

--- a/ui/events.htm
+++ b/ui/events.htm
@@ -14,7 +14,7 @@
 </div>
 
 <div>
-    <blockquote>
+    <blockquote style="text-align: center">
         <p><a href=
         "https://support.northshorelij.com/MidnightInParis">
         <img src="/ui/images/THF_invite.jpg" /></a></p>
@@ -32,7 +32,7 @@
 </div>
 
 <div>
-     <blockquote>
+     <blockquote style="text-align: center">
         <p><a href=
         "https://www.blacktie-america.com/online_sales/rsvp_ticket_purchase.cfm?rsvpid=304">
         <img src="/ui/images/IHT12.jpeg" /></a></p>
