combined font links to one googleapis

--- a/ui/layout.htm
+++ b/ui/layout.htm
@@ -12,8 +12,7 @@
 		<!--[if lt IE 8]><link rel="stylesheet" href="/ui/css/blueprint/ie.css" type="text/css" media="screen, projection"><![endif]-->
 		<link rel="stylesheet" href="/ui/css/blueprint/plugins/fancy-type/screen.css" type="text/css" media="screen, projection" />
 		<link rel="stylesheet" href="/ui/css/thf_style.css" type="text/css"  />
-		<link href='http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:light,regular,bold&amp;subset=latin' rel='stylesheet' type='text/css' />
-		<link href='http://fonts.googleapis.com/css?family=EB+Garamond' rel='stylesheet' type='text/css' />
+		<link href='http://fonts.googleapis.com/css?family=EB+Garamond|Yanone+Kaffeesatz:400,700' rel='stylesheet' type='text/css'>
 		<?php 
 			if(isset($css)){
 				foreach($css as $sheet) {
