--- a/ui/events.htm
+++ b/ui/events.htm
@@ -9,15 +9,11 @@
     </map>
 </div>
 
-<div class="title2">
-    Annual <span class="pink3">THF</span> Gala 2014
-</div>
-
 <div>
     <blockquote style="text-align: center">
         <p><a href=
-        "https://support.northshorelij.com/MidnightInParis">
-        <img src="/ui/images/THF_invite.jpg" /></a></p>
+        "https://support.northshorelij.com/mustachebash">
+        <img src="/ui/images/mustache-bash.jpg" /></a></p>
     </blockquote>
 </div>
 
@@ -28,44 +24,15 @@
 <div class="div"><img src="/ui/images/thf_div.jpg" /></div>
 
 <div class="title2">
-    I <span class="pink3">Heart</span> Teenok Party 2012
+    Annual <span class="pink3">THF</span> Gala 2014
 </div>
 
 <div>
-     <blockquote style="text-align: center">
+    <blockquote style="text-align: center">
         <p><a href=
-        "https://www.blacktie-america.com/online_sales/rsvp_ticket_purchase.cfm?rsvpid=304">
-        <img src="/ui/images/IHT12.jpeg" /></a></p>
+        "https://support.northshorelij.com/MidnightInParis">
+        <img src="/ui/images/THF_invite.jpg" /></a></p>
     </blockquote>
-</div>
-
-<div>
-    <p class="text">Click the image above to purchase tickets to <b>I
-    Heart Teenok 2012</b> on 4/26/12!</p>
-</div>
-
-<div class="div"><img src="/ui/images/thf_div.jpg" /></div>
-
-<div class="title2">
-    I <span class="pink3">Heart</span> Teenok Party 2011
-</div>
-
-<div>
-    <p class="text">Featured on CharityHappenings – <a href=
-    "http://charityhappenings.org/"><span class=
-    "pink3">http://charityhappenings.org</span></a></p>
-</div>
-
-<div>
-    <p class="text">On Thursday, June 23rd, The Teenok Heart Foundation
-    hosted its 2nd annual "I Heart Teenok Party." The evening included
-    a double blind wine-tasting challenge &amp; lesson led by Master
-    Sommelier Laura Maniec, live music by acclaimed cellists from the
-    North Sky Ensemble, and a raffle with great prizes. Guests enjoyed
-    a Pinkberry station where they were able to create their own
-    desserts. The event was held at Astor Center in NYC and all funds
-    raised went to support the Teenok Heart Foundation and pediatric
-    cardiology.</p>
 </div>
 
 <div class="div"><img src="/ui/images/thf_div.jpg" /></div>
