--- a/ui/events.htm
+++ b/ui/events.htm
@@ -30,9 +30,13 @@
 <div>
     <blockquote style="text-align: center">
         <p><a href=
-        "https://support.northshorelij.com/MidnightInParis">
+        "http://danmarinophoto.photoshelter.com/gallery/Midnight-in-Paris-June-19-2014/G00000krUAQHLGJQ/C0000BwRqtNmUrU8">
         <img src="/ui/images/THF_invite.jpg" /></a></p>
     </blockquote>
+</div>
+
+<div>
+     <p class="text">Click the image above to see some fun pics from the  <b>Annual THF Gala</b>!</p>
 </div>
 
 <div class="div"><img src="/ui/images/thf_div.jpg" /></div>
